# FastApi

./: hello.py  pyproject.toml
chapter_7_web_layer/src/: main.py
chapter_7_web_layer/src/data/: creature.py  explorer.py  init.py
chapter_7_web_layer/src/db/: cryptid.db
chapter_7_web_layer/src/fake/: creature.py  explorer.py
chapter_7_web_layer/src/service/: creature.py  explorer.py
chapter_7_web_layer/src/test/unit/data/: test_creature.py
chapter_7_web_layer/src/test/unit/service/: test_creature.py
chapter_7_web_layer/src/web/: creature.py  explorer.py
src/: main.py
src/fake/: creature.py  explorer.py
src/model/: creature.py  explorer.py
src/web/: creature.py  explorer.py
